--- a/app/views/handle_deposits/index.html.erb
+++ b/app/views/handle_deposits/index.html.erb
@@ -2,20 +2,20 @@
 <div id="maincontent">
   <h1>Handle Deposits</h1>
   <div class="col-md-12">
-    <div class="col-md-2">ID</div>
+    <div class="col-md-1">ID</div>
     <div class="col-md-2">Noid</div>
-    <div class="col-md-3">Action</div>
-    <div class="col-md-3">Verified</div>
-    <div class="col-md-2">Sigma</div>
+    <div class="col-md-2">Action</div>
+    <div class="col-md-2">Verified</div>
+    <div class="col-md-5">Modified</div>
   </div>
   <div class="col-md-12"><hr/></div>
   <% @handle_deposits.each do |handle_deposit| %>
     <div class="col-md-12">
-      <div class="col-md-2"><%= "#{handle_deposit.id}" %></div>
+      <div class="col-md-1"><%= "#{handle_deposit.id}" %></div>
       <div class="col-md-2"><%= "#{handle_deposit.noid}" %></div>
-      <div class="col-md-3"><%= "#{handle_deposit.action}" %></div>
-      <div class="col-md-3"><%= "#{handle_deposit.verified}" %></div>
-      <div class="col-md-2"><%= "#{handle_deposit.sigma}" %></div>
+      <div class="col-md-2"><%= "#{handle_deposit.action}" %></div>
+      <div class="col-md-2"><%= "#{handle_deposit.verified}" %></div>
+      <div class="col-md-5"><%= "#{handle_deposit.updated_at}" %></div>
     </div>
   <% end %>
   <div class="col-md-12"><br></div>
