Removed link to list of subscribers, which no longer exists.

--- a/app/views/e_pubs/access/_heb.html.erb
+++ b/app/views/e_pubs/access/_heb.html.erb
@@ -40,7 +40,7 @@
             </ul>
           <% end %>
           <!-- TODO: add an institutional access message that can provide a list of subscribers -->
-          <p>If your institution has purchased a subcription, you may attempt to login at the appropriate institution. <a href="https://www.humanitiesebook.org/subscriptions/institutions/subscribing-institutions/">See if your institution is a subscriber</a>.</p>
+          <p>If your institution has purchased a subcription, you may attempt to login at the appropriate institution.</p>
           <div id="idpSelect" class="panel-body"></div>
           <script>
               idSelectUIParms = new IdPSelectUIParms();
