System Specs - DiscoFeed - Real User Monitor

--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -79,11 +79,13 @@
   </script>
 
   </head>
+
   <%= tag.body class: press_subdomains(press_subdomain) do %>
 
     <%= content_for?(:body) ? yield(:body) : yield %>
 
     <%= render 'shared/ajax_modal' %>
     <%= render 'shared/cookie_alert' %>
+    <%= render 'shared/monitoring' %>
   <% end %>
 </html>
