--- a/app/views/fulcrum/_reports.html.erb
+++ b/app/views/fulcrum/_reports.html.erb
@@ -3,7 +3,8 @@
 <% end %>
 <h1>Reports</h1>
 <ul>
-  <li><%= link_to "Tombstones", tombstones_path %></li>
-  <li><%= link_to "Handle Deposits", handle_deposits_path %></li>
+  <li><%= link_to "APTrust Deposits", aptrust_deposits_path %></li>
   <li><%= link_to "COUNTER Reports", customers_path %></li>
+  <li><%= link_to "Handle Deposits", handle_deposits_path %></li>
+  <li><%= link_to "Tombstones", tombstones_path %></li>
 </ul>
