HELIO-3073 Remove Beta from Fulcrum

--- a/app/views/shared/_brand_fulcrum_footer_block.html.erb
+++ b/app/views/shared/_brand_fulcrum_footer_block.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-4 platform col">
-  <p>Powered by <a href="/" title="Fulcrum" data-turbolinks="false"><%= image_tag "fulcrum-white-50px.png", class: 'logo', alt: 'Fulcrum Beta logo' %></a> <a class="beta" href="/beta" title="Fulcrum Beta information" data-turbolinks="false">beta</a></p>
+  <p>Powered by <a href="/" title="Fulcrum" data-turbolinks="false"><%= image_tag "fulcrum-white-50px.png", class: 'logo', alt: 'Fulcrum logo' %></a></p>
   <ul class="list-unstyled">
     <!-- <li><a href="#">Help</a></li> -->
     <li><a href="/about/" data-turbolinks="false">About</a></li>
