--- a/fulcrum/_includes/footer.html
+++ b/fulcrum/_includes/footer.html
@@ -10,6 +10,7 @@
             <li><a class="white-text" href="/about/">About</a></li>
             <li><a class="white-text" href="/blog/">Blog</a></li>
             <li><a class="white-text" href="/partner-with-us/">Partner With Us</a></li>
+            <li><a class="white-text" href="/feedback/">Feedback</a></li>
             <li><a class="white-text" href="mailto:{{ site.email }}">Contact</a></li>
             <li><a class="white-text" href="https://github.com/{{ site.github_username }}">Contribute</a></li>
             <li><a id="sign-in" class="white-text" rel="nofollow"></a></li>
