HELIO-3190 Shadowy minus on Leaflet zoom buttons

--- a/app/assets/stylesheets/common/heliotrope-leaflet-image.css
+++ b/app/assets/stylesheets/common/heliotrope-leaflet-image.css
@@ -8,3 +8,7 @@
     outline: 6px auto -webkit-focus-ring-color;
     outline-offset: -3px;
 }
+
+.leaflet-bar a, .leaflet-bar a:hover {
+    text-decoration: none !important;
+}
