--- a/app/views/e_pubs/show_pdf.html.erb
+++ b/app/views/e_pubs/show_pdf.html.erb
@@ -391,8 +391,10 @@
 
         this._preview = form.querySelector(`#x${this._id}-preview > div`);
 
-        var currentScale = this._control._reader.options.scale;
-        this._inputs.querySelector('input[value="' + currentScale + '"]').checked = true;
+        var currentScale = this._control._reader.options.scale || 'auto';
+        if (this._inputs.querySelector('input[value="' + currentScale + '"]')) {
+          this._inputs.querySelector('input[value="' + currentScale + '"]').checked = true;
+        }
         this._current.scale = currentScale;
 
         this._inputs.addEventListener('change', function(event) {
@@ -406,12 +408,12 @@
       },
 
       updateForm: function(form, options, saveable) {
-        var input = this._inputs.querySelector("input:checked");
-        options.scale = saveable.scale = input.value;
+        var current = this._inputs.querySelector('input:checked') ? this._inputs.querySelector('input:checked').value : 'auto';
+        options.scale = saveable.scale = current;
       },
 
       _updatePreview: function() {
-        var current = this._inputs.querySelector('input:checked').value;
+        var current = this._inputs.querySelector('input:checked') ? this._inputs.querySelector('input:checked').value : 'auto';
         var scale = ( parseFloat(current, 10) );
         if ( isNaN(scale) ) {
           scale = '1.0';
