HELIO-3200 - modify custom navigation (lever and bar); add bar logos; implement custom jumbotron; adjust colors to bar spec; modify custom footer (lever and bar); add login back to footer; customize bar footer to spec; add visible focus state to anchor elements in list view; adjust display of bar pub year and bar number

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -302,6 +302,10 @@ footer.press {
       border-bottom: none;
       padding-top: 2em;
 
+      a {
+        display: inline-block; 
+      }
+
       .thumbnail {
         text-align: left;
         border: none;
