--- a/app/views/layouts/curation_concerns.html.erb
+++ b/app/views/layouts/curation_concerns.html.erb
@@ -16,20 +16,20 @@
   </div>
 
   <% if defined?(@press.subdomain) && !@press.new_record? %>
-    <% if @press.subdomain == 'leverpress' %>
-      <%= render 'shared/brand_press_footer_lever' %>
+    <% if @press.subdomain == 'leverpress' || 'barpublishing' %>
+      <%= render 'shared/brand_press_footer_custom' %>
     <% else %>
       <%= render 'shared/brand_press_footer' %>
     <% end %>
   <% elsif defined?(@presenter.subdomain) %>
-    <% if @presenter.subdomain == 'leverpress' %>
-      <%= render 'shared/brand_press_footer_lever' %>
+    <% if @presenter.subdomain == 'leverpress' || 'barpublishing' %>
+      <%= render 'shared/brand_press_footer_custom' %>
     <% else %>
       <%= render 'shared/brand_press_footer' %>
     <% end %>
   <% elsif defined?(@presenter.parent.subdomain) %>
-    <% if @presenter.parent.subdomain == 'leverpress' %>
-      <%= render 'shared/brand_press_footer_lever' %>
+    <% if @presenter.parent.subdomain == 'leverpress' || 'barpublishing' %>
+      <%= render 'shared/brand_press_footer_custom' %>
     <% else %>
       <%= render 'shared/brand_press_footer' %>
     <% end %>
