--- a/app/views/press_catalog/_index_gallery.html.erb
+++ b/app/views/press_catalog/_index_gallery.html.erb
@@ -11,10 +11,10 @@
       <p aria-label="By <%= presenter.authors %>" class="authors"><%= presenter.authors %></p>
       <% if press.subdomain == 'barpublishing' %>
         <% if presenter.date_created.length.positive? %>
-          <p><strong><%= presenter.date_created[0] %></strong></p>
+          <span class="pub-date">(<%= presenter.date_created[0] %>)</span>
         <% end %>
         <% if presenter.bar_number&.length&.positive? %>
-          <p><strong><%= t('bar_number') %>: </strong> <%= presenter.bar_number %></p>
+          <span class="bar-number"><strong><%= t('bar_number') %>:</strong> <%= presenter.bar_number %></span>
         <% end %>
       <% end %>
     </div>
