--- a/app/views/shared/_brand_press_footer_custom.html.erb
+++ b/app/views/shared/_brand_press_footer_custom.html.erb
@@ -13,7 +13,7 @@
             <%= render 'shared/brand_press_footer_block_c' %>
         </div>
         <div class="col-md-6 text-right">
-            <small>Powered by</small> <a href="https://fulcrum.org/"><%= image_tag "fulcrum-full-white.svg", class: 'fulcrum', alt: 'Fulcrum logo', height: '20', width: 'auto' %></a>
+            <small>Powered by</small> <a href="https://fulcrum.org/"><%= image_tag "fulcrum-full-white.svg", class: 'fulcrum', alt: 'Fulcrum logo', height: '20', width: 'auto' %></a> <span class="admin"><small>· <% if current_user %> <%= link_to 'Log Out', main_app.destroy_user_session_path, class: 'log-out', 'data-turbolinks': 'false' %> <% else %> <%= link_to 'Log In', main_app.default_login_path, class: 'login', 'data-turbolinks': 'false' %> <% end %></small></span>
         </div>
 
     </div>
