HELIO-3073 - tweak formatting; add feedback link to mobile nav and helio app footer

--- a/app/views/shared/_brand_fulcrum_footer_block.html.erb
+++ b/app/views/shared/_brand_fulcrum_footer_block.html.erb
@@ -4,6 +4,7 @@
     <!-- <li><a href="#">Help</a></li> -->
     <li><a href="/about/" data-turbolinks="false">About</a></li>
     <li><a href="/blog/" data-turbolinks="false">Blog</a></li>
+    <li><a href="/feedback/" data-turbolinks="false">Feedback</a></li>
     <li><a href="mailto:fulcrum-info@umich.edu">Contact</a></li>
     <li><a href="https://github.com/mlibrary/heliotrope">Contribute</a></li>
     <li><a href="/accessibility/" data-turbolinks="false">Accessibility</a></li>
