--- a/fulcrum/_includes/header.html
+++ b/fulcrum/_includes/header.html
@@ -22,6 +22,7 @@
           <li><a href="/about/">About</a></li>
           <li><a href="/blog/">Blog</a></li>
           <li><a href="/partner-with-us/">Partner With Us</a></li>
+          <li><a href="/feedback/">Feedback</a></li>
           <li><a href="mailto:{{ site.email }}">Contact</a></li>
           <li><a href="https://github.com/{{ site.github_username }}">Contribute</a></li>
           <li><a href="/accessibility/">Accessibility</a></li>
